# Project_Indigo

./: CMakeLists.txt  main.cpp  vitafile
Engine/definitions/: Ability.cpp  Ability.h  Action.cpp  Action.h  BattleContext.cpp  BattleContext.h  Effect.cpp  Effect.h  Entity.cpp  Entity.h
Engine/managers/: TurnManager.cpp  TurnManager.h
